# OpenGL-One

./: .gitignore  CMakeLists.txt
include/Application/: Application.h
include/Renderer/: Renderer.h  Shader.h  Window.h
shaders/: simple.frag  simple.vert
src/: main.cpp
src/Application/: application.cpp
src/Renderer/: renderer.cpp  shader.cpp  window.cpp
